--- a/README
+++ b/README
@@ -1,1 +1,14 @@
-This is a Wordpress plugin for use on commons-in-a-box sites.
+Advanced profiles for MLA Commons: https://commons.mla.org
+
+Inspired by (and not compatible with) cac-advanced-profiles: https://github.com/cuny-academic-commons/cac-advanced-profiles
+
+The following plugins are required to use this plugin:
+
+  buddypress
+  buddypress-followers
+  bp-block-member
+  mla-academic-interests
+
+Modify the included migration script to fit your existing data and then run it before using this plugin:
+
+  wp profile migrate
